--- a/ControlVJ/ControlVJ/ControlVJ.csproj
+++ b/ControlVJ/ControlVJ/ControlVJ.csproj
@@ -102,5 +102,8 @@
   <ItemGroup>
     <Resource Include="img\iconMakipos.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="img\download.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
